--- a/resume/index.html
+++ b/resume/index.html
@@ -66,11 +66,8 @@
 <script src="../rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
-<center>
-<object data="/resume.pdf" type="application/pdf" >
-<embed src="../resume.pdf" type="application/pdf" style="min-height:100vh;width:100%" />
-</object>
-</center>
+<iframe src="../resume.pdf" width="100%" height="800" border="0">
+</iframe>
 
             
 
